// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a task when pressed: Todos Result 1`] = `
{
  "columnId": "column-1",
  "id": Any<String>,
  "position": 1,
  "text": "My new task",
}
`;

exports[`should focus on the input component and submit when 'Enter' is pressed: Columns Result 1`] = `
{
  "columnId": "column-1",
  "id": Any<String>,
  "position": 1,
  "text": "My new task 2",
}
`;
